# onnxruntime

./: setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bugreport.md  question.md
.github/workflows/: ff-merge.yml
cmake/: CMakeLists.txt  decrypt_vv_model.cmake  onnxruntime_providers.cmake  onnxruntime_python.cmake  onnxruntime_rocm_hipify.cmake
decrypt_vv_model/: Cargo.toml  build.rs
decrypt_vv_model/src/: lib.rs
docs/api/csharp/: manifest.json
docs/api/python/: searchindex.js  tutorial.html
docs/api/python/auto_examples/: plot_backend.html  plot_common_errors.html  plot_convert_pipeline_vectorizer.html  plot_load_and_predict.html  plot_metadata.html  plot_pipeline.html  plot_profiling.html  plot_train_convert_predict.html  sg_execution_times.html
onnxruntime/contrib_ops/cpu/bert/: attention_common.h
onnxruntime/contrib_ops/cuda/bert/: add_bias_transpose.cu  attention.cc  rotary_embedding_util.h
onnxruntime/contrib_ops/rocm/bert/: attention.cc  attention.cuh  attention_impl.cu
onnxruntime/core/framework/: onnxruntime_map_type_info.cc  onnxruntime_map_type_info.h  onnxruntime_sequence_type_info.cc  onnxruntime_sequence_type_info.h  onnxruntime_typeinfo.cc  onnxruntime_typeinfo.h  tensor_type_and_shape.cc  tensor_type_and_shape.h
onnxruntime/core/session/: inference_session.cc  provider_bridge_ort.cc
onnxruntime/test/onnx/: main.cc
onnxruntime/test/optimizer/: compute_optimizer_test.cc
onnxruntime/test/testdata/: onnx_backend_test_series_filters.jsonc
rust/onnxruntime-sys/: build.rs
(+31 files in other folders)
